--- a/index.html
+++ b/index.html
@@ -1,34 +1,20 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Convite do Bernardo</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
 </head>
+<style>
+
+  
+</style>
 <body>
   <div id="pagina-convite" class="pagina ativa">
-    <header class="convite-header">
-      <h1 class="titulo">Bernardo está fazendo <span class="idade">4 anos</span>!</h1>
-      <p class="frase">É hora da aventura! Venha comemorar comigo!</p>
-    </header>
-
-    <section class="detalhes">
-      <div class="info-item">
-        <span class="label">📅 Data:</span>
-        <span class="valor">Sábado, 10 de agosto de 2025</span>
-      </div>
-      <div class="info-item">
-        <span class="label">⏰ Horário:</span>
-        <span class="valor">Das 16h às 20h</span>
-      </div>
-      <div class="info-item">
-        <span class="label">📍 Local:</span>
-        <span class="valor">Salão Festa e Cia - Rua Lorca, 10 - União</span>
-      </div>
+    <section>
+        
     </section>
-
     <section class="botoes">
       <button onclick="abrirMapa()">📍 Como Chegar</button>
       <button onclick="abrirModalConfirmacao()">✅ Confirmar Presença</button>
