--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Convite do Bernardo</title>
-  <link rel="stylesheet" href="/novo_codigo/css/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- Página do Convite -->
@@ -79,6 +79,6 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script src="/novo_codigo/script/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
